--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<nav class="nav">
+    <a class="nav-link" routerLink="home">Home</a>
+    <a class="nav-link" routerLink="users">Users</a>
+  </nav>
+
+<router-outlet></router-outlet>
+
+
