--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <nav class="nav">
     <a class="nav-link" routerLink="home">Home</a>
     <a class="nav-link" routerLink="users">Users</a>
+    <a class="nav-link" routerLink="parent">Parent</a>
+    <a class="nav-link" routerLink="directives">Structural directives</a>
+
+
   </nav>
 
 <router-outlet></router-outlet>
